Bug 331570 - Drawing artefacts with component widgets
Summary: Drawing artefacts with component widgets
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-27 15:04 UTC by Ralf Habacker
Modified: 2014-03-03 12:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-02-27 15:04:36 UTC
Moving of component widgets on component diagrams with executable attribute leaves widget border tracks on the diagram. 

Reproducible: Always

Steps to Reproduce:
1. open umbrello 
2. add a component diagram
3. add a component and set executable attribute
Actual Results:  
Moving widgets leaves a border track on the diagram

Expected Results:  
There should no border track on the diagram
Comment 1 Ralf Habacker 2014-03-03 12:09:14 UTC
Git commit cc4ab0bc977f06c3c037f47f327b8570b4b78438 by Ralf Habacker.
Committed on 27/02/2014 at 14:55.
Pushed by habacker into branch 'master'.

Fix component widgets drawing artefacts when executable attribute set.

M  +6    -0    umbrello/widgets/componentwidget.cpp

http://commits.kde.org/umbrello/cc4ab0bc977f06c3c037f47f327b8570b4b78438
Comment 2 Ralf Habacker 2014-03-03 12:14:13 UTC
Git commit 8cdeb43821abf2a80d0a6076c50d9b522ba4fc32 by Ralf Habacker.
Committed on 27/02/2014 at 14:55.
Pushed by habacker into branch 'KDE/4.13'.

Fix component widgets drawing artefacts when executable attribute set.
FIXED-IN:4.13.0
(cherry picked from commit cc4ab0bc977f06c3c037f47f327b8570b4b78438)

M  +6    -0    umbrello/widgets/componentwidget.cpp

http://commits.kde.org/umbrello/8cdeb43821abf2a80d0a6076c50d9b522ba4fc32
Comment 3 Ralf Habacker 2014-03-03 12:15:32 UTC
Git commit 8773f50111df1b4c5c47304e89eb59ec26b58065 by Ralf Habacker.
Committed on 27/02/2014 at 14:55.
Pushed by habacker into branch 'KDE/4.12'.

Fix component widgets drawing artefacts when executable attribute set.
FIXED-IN:4.12.3
(cherry picked from commit cc4ab0bc977f06c3c037f47f327b8570b4b78438)

M  +6    -0    umbrello/widgets/componentwidget.cpp

http://commits.kde.org/umbrello/8773f50111df1b4c5c47304e89eb59ec26b58065