Fix component widgets drawing artefacts when executable attribute set.

BUG:331570
FIXED-IN:4.12.3
(cherry picked from commit cc4ab0bc977f06c3c037f47f327b8570b4b78438)